Job_scripts/Outputs/job.56614299.out
  File "/home/ap6603/communication-subspace/kohn_data_spont.py", line 8
    from Data_crcns.v1-v2_gratings.software.ExtractSpikes import ExtractSpikes
                      ^
SyntaxError: invalid syntax
